aggiunta sezione novità e creazione della pagina registro novità

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <!-- <li><a href="documentazione_viaggi.html">🛣️ Pianificazione Viaggi</a></li> -->
       </ul>
     </section>
+
+    <section>
+        <!-- la sezione delle novita che mi porta alla pagina delle novita -->
+        <h2><a href="./modifiche-fatte/indice.html">🆕Novità</a></h2>
+      </section>
   </div>
 </body>
 </html>
