Add initial version of novità index page with recent updates and images

--- a/modifiche-fatte/indice.html
+++ b/modifiche-fatte/indice.html
@@ -12,7 +12,11 @@
       <h1>📘 Registro delle novita</h1>
     </header>
 
-    
+    <section>
+      <h2>🆕 Novità recenti</h2>
+      <ul>
+        <li><strong>2025-06-30:</strong> Aggiunto <a href="/modifiche-fatte/navigatore-ptv.html">navigatore per ptv</a></li>
+      </ul>
   </div>
 </body>
 </html>
