--- a/modifiche-fatte/navigatore-ptv.html
+++ b/modifiche-fatte/navigatore-ptv.html
@@ -37,7 +37,7 @@
       <ol>
         <li>Aprire la configurazione del software</li>
         <li>Verificare aggiornamento menu e API</li>
-        <li>Abilitare il servizio <strong>PTV Navigator</strong></li>
+        <li>Abilitare il servizio <strong>PTV Navigator</strong> dentro le impostazioni di ptv</li>
         <li>Salvare la configurazione</li>
       </ol>
       <p>Questa operazione abilita il salvataggio del percorso (BCR) nella tabella <code>ElencoViaggiTestataPercorsi</code>.</p>
