--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section>
         <!-- la sezione delle novita che mi porta alla pagina delle novita -->
-        <h2><a href="./modifiche-fatte/indice.html">🆕Novità</a></h2>
+        <h2><a href="./modifiche-fatte/modifiche-indice.html">🆕Novità</a></h2>
       </section>
   </div>
 </body>
