Add link to the "Sezione delle Novità" in the index page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     </header>
 
     <section>
+      <!-- la sezione delle novita che mi porta alla pagina delle novita -->
+      <h2><a href="./modifiche-fatte/modifiche-indice.html">🆕 Sezione delle Novità</a></h2>
+    </section>
+
+    <section>
+      <h2>📖 Guida Elite</h2>
       <ul>
         <li><a href="./satellitari/satellitari-normies.html">📡 Sistema Satellitari</a></li>
         <!-- Aggiungi altri collegamenti qui in futuro -->
@@ -22,12 +28,6 @@
       </ul>
     </section>
 
-    <br/>
-
-    <section>
-        <!-- la sezione delle novita che mi porta alla pagina delle novita -->
-        <h2><a href="./modifiche-fatte/modifiche-indice.html">🆕Novità</a></h2>
-      </section>
   </div>
 </body>
 </html>
