--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -15,7 +15,7 @@
     <section>
       <h2>🆕 Novità recenti</h2>
       <ul>
-        <li><strong>2025-06-30:</strong> Aggiunto <a href="/modifiche-fatte/navigatore-ptv.html">navigatore per ptv</a></li>
+        <li><strong>2025-06-30:</strong> Aggiunto <a href="./navigatore-ptv.html">navigatore per ptv</a></li>
         <div>
           <li><strong>2025-06-30:</strong> Aggiunto nel lettore barcode Secondo numero Network</li>
           <img src="../assets/barcode/barcode-secondo-numero.png" alt="Secondo numero Network" width="250px">
