--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <!-- Aggiungi altri collegamenti qui in futuro -->
         <li><a href="./ordini/inserire-un-ordine.html">📦 Gestione Ordini</a></li>
         <!-- <li><a href="documentazione_viaggi.html">🛣️ Pianificazione Viaggi</a></li> -->
+        <li><a href="./pianificazione/gruppi-mezzi.html">🛣️ Gruppi pianificazione</a></li>
       </ul>
     </section>
 
