Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -15,6 +15,10 @@
     <section>
       <h2>🆕 Novità recenti</h2>
       <ul>
+        <div>
+          <li><strong>2025-07-01:</strong> Formulari: con tasto dx in ricerca si apre finestra ricerca separata da usare in secondo monitor, con doppio click apre la scheda selezionata</li>
+          <img src="../assets/formulario/ricercaformulario.png" alt="Modulo Ricerca" width="450px">
+        </div>
         <li><strong>2025-06-30:</strong> Aggiunto <a href="./navigatore-ptv.html">navigatore per ptv</a></li>
         <div>
           <li><strong>2025-06-30:</strong> Aggiunto nel lettore barcode Secondo numero Network</li>
