Add new card for "compensazione scadenze" in recent updates section

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -50,6 +50,13 @@
         <div class="card">
           <div class="card-title">4098</div>
           <div class="card-body">
+            <p>Aggiunta <a href="./Compensazione-scadenze.html">compensazione scadenze</a></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">4098</div>
+          <div class="card-body">
             <p>Aggiunta impostazione per la gestione della colonna
               "PoiInformation" nella sezione container</p>
             <img src="../assets/Container/Impostazioni/SettaggioColonnaInformazionePoi.png"
