--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -48,7 +48,7 @@
       <details open>
         <summary>2025-07-01</summary>
         <div class="card">
-          <div class="card-title">4098</div>
+          <div class="card-title">Compensazione Scadenze</div>
           <div class="card-body">
             <p>Aggiunta <a href="./Compensazione-scadenze.html">compensazione scadenze</a></p>
           </div>
