Fix stylesheet path in index.html and add new spese management pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Indice Documentazione</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <div class="container">
@@ -26,6 +26,8 @@
         <li><a href="./ordini/inserire-un-ordine.html">📦 Gestione Ordini</a></li>
         <!-- <li><a href="documentazione_viaggi.html">🛣️ Pianificazione Viaggi</a></li> -->
         <li><a href="./pianificazione/gruppi-mezzi.html">🛣️ Gruppi pianificazione</a></li>
+        <!-- Capitolo delle spese -->
+        <li><a href="./spese/indice-spese.html">💰 Gestione Spese</a></li>
       </ul>
     </section>
 
