Aggiunta pagina del riepilogo analisi aziendale e centrato il bottone

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
     <section>
       <!-- la sezione delle novita che mi porta alla pagina delle novita -->
-      <h2><a href="./modifiche-fatte/modifiche-indice.html">🆕 Sezione delle Novità</a></h2>
+      <!-- <h2><a href="./modifiche-fatte/modifiche-indice.html">🆕 Sezione delle Novità</a></h2> -->
+      <button onclick="window.location.href='./modifiche-fatte/modifiche-indice.html'" class="bottone-novita">
+        🆕 Sezione delle Novità
+      </button>
     </section>
 
     <section>
