--- a/spese/indice-spese.html
+++ b/spese/indice-spese.html
@@ -20,6 +20,7 @@
         <section>
             <h2>💰 Tipologie di Spese</h2>
             <ul>
+                <li><a href="../spese/riepilogo-analisi-aziendale.html">Riepilogo Analisi Aziendale</a></li>
                 <li><a href="../spese/spese-viaggio-base.html">Spese Viaggio Base</a></li>
                 <!-- <li><a href="./spese/spese-veicolo.html">Spese Veicolo</a></li>
                 <li><a href="./spese/spese-autista.html">Spese Autista</a></li>
