Refactor code structure for improved readability and maintainability

--- a/modifiche-fatte/Compensazione-scadenze.html
+++ b/modifiche-fatte/Compensazione-scadenze.html
@@ -12,7 +12,8 @@
       <h2>📦 Compensazione</h2>
       <ul>
         <li>La compensazione avviene tra scadenze di fatture attive  e scadenze di fatture passive, tra clienti e fornitori con la stessa partita iva.</li>
-        <li>Per attivarla è necessario raggiungere la tabella configurazioneapplicazione e spuntare Attivo su modulo = ‘Generico’, Proprieta = ‘Compensazione’</li>
+        <li>Per attivarla è necessario raggiungere il tasto delle impostazioni del modulo, e successivamente attivare ‘Attiva compensazione’, poi, salvare le impostazioni, ed infine riavviare il modulo scadenze pagamenti</li>
+        <img src="../assets/ScadenzePagamenti/scadenzepag0.png" alt="Modulo Ricerca" width="650px">
         <li>Sotto un esempio (pre filtrato) di un cliente e fornitore che vanno bene per la nostra prova, il tasto cerchiato in rosso apre la finestra di compensazione:</li>
         <img src="../assets/ScadenzePagamenti/scadenzepag1.png" alt="Modulo Ricerca" width="650px">
         <li>Aperta la finestra di compensazione troviamo 2 griglie (SX = attive e DX = passive)</li>
