--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -46,6 +46,20 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-07-02</summary>
+        <div class="card">
+          <div class="card-title">Formulari</div>
+          <div class="card-body">
+            <p>attivando la funzione già presente nelle conferme “MITTENTI DESTINATARI CON VIA”, che aggiunge via e luogo nella selezione dei mitt/dest nella combobox, si attiva la stessa funzionalità anche nella scheda del formulario per Produttore e Destinatario</p>
+            <img src="../assets/formulario/formulari20250702_1.png" alt="Formulario Mittenti Destinatari con Via" width="450px">
+            <img src="../assets/formulario/formulari20250702_2.png" alt="Formulario Mittenti Destinatari con Via" width="450px">
+            <img src="../assets/formulario/formulari20250702_3.png" alt="Formulario Mittenti Destinatari con Via" width="450px">
+          <div class="card-explanation">
+          </div>
+        </div>
+      </details>
+
+      <details>
         <summary>2025-07-01</summary>
         <div class="card">
           <div class="card-title">Compensazione Scadenze</div>
@@ -53,7 +67,6 @@
             <p>Aggiunta <a href="./Compensazione-scadenze.html">compensazione scadenze</a></p>
           </div>
         </div>
-
         <div class="card">
           <div class="card-title">4098</div>
           <div class="card-body">
