Add "Tratta Dopo Destinazione" feature documentation and style updates

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -6,34 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>novita</title>
   <link rel="stylesheet" href="../style.css">
-  <style>
-    .card {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      margin: 16px 0;
-      padding: 16px;
-      background: #fafbfc;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.03);
-    }
-
-    .card-title {
-      font-size: 1.1em;
-      margin-bottom: 8px;
-      color: #2a3a4a;
-    }
-
-    .card-body {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-
-    .card-explanation {
-      margin-bottom: 8px;
-      font-size: 0.9em;
-      color: #555;
-    }
-  </style>
 </head>
 
 <body>
@@ -44,6 +16,17 @@
 
     <section>
       <h2>🆕 Novità recenti</h2>
+
+      <details open>
+        <summary>2025-07-03</summary>
+        <div class="card">
+          <div class="card-title">Tratta dopo destinazione</div>
+          <div class="card-body">
+            <p>Attivando la funzionalità <a href="../modifiche-fatte/tratta-dopo-destinazione.html">Tratta dopo destinazione</a> si attiva la possibilità di creare una nuova tratta dopo aver raggiunto una destinazione.</p>
+          <div class="card-explanation">
+          </div>
+        </div>
+      </details>
 
       <details open>
         <summary>2025-07-02</summary>
