--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -20,15 +20,21 @@
       <details open>
         <summary>2025-07-03</summary>
         <div class="card">
+          <div class="card-title">Tratta dopo destinazione - Aggiornamento</div>
+          <div class="card-body">
+            <p>Attivando la funzionalità <a href="../modifiche-fatte/tratta-dopo-nuova-conf.html">Tratta dopo destinazione</a> con nuova tratta.</p>
+          </div>
+        </div>
+
+        <div class="card">
           <div class="card-title">Tratta dopo destinazione</div>
           <div class="card-body">
             <p>Attivando la funzionalità <a href="../modifiche-fatte/tratta-dopo-destinazione.html">Tratta dopo destinazione</a> si attiva la possibilità di creare una nuova tratta dopo aver raggiunto una destinazione.</p>
-          <div class="card-explanation">
           </div>
         </div>
       </details>
 
-      <details open>
+      <details>
         <summary>2025-07-02</summary>
         <div class="card">
           <div class="card-title">Formulari</div>
