Add new HTML module for managing additional travel expenses
- Created a new HTML file for the "Spese Aggiuntive Viaggio" module.
- Included sections for description, new features, technical functionalities, and module objectives.
- Enhanced user experience by integrating a DataGrid for managing additional costs.
- Implemented methods for inserting, modifying, and deleting expenses.
- Added class for handling historical expenses in the database.

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -20,6 +20,13 @@
       <details open>
         <summary>2025-07-03</summary>
         <div class="card">
+          <div class="card-title">Spese vecchie nel viaggio</div>
+          <div class="card-body">
+            <p>Reintegrate le vecchie <a href="../modifiche-fatte/spese-aggiuntive-vecchie.html">TxtSpese</a> aggiuntive al viaggio</p>
+          </div>
+        </div>
+
+        <div class="card">
           <div class="card-title">Tratta dopo destinazione - Aggiornamento</div>
           <div class="card-body">
             <p>Attivando la funzionalità <a href="../modifiche-fatte/tratta-dopo-nuova-conf.html">Tratta dopo destinazione</a> con nuova tratta.</p>
