Add presentation section and demo link to documentation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     </section>
 
     <section>
+      <h2>📖 Presentazione Software</h2>
+      <ul>
+        <li><a href="./ordini/demo-elite.html">🧑‍💻 Demo di Oscar</a></li>
+        <!-- Aggiungi altri collegamenti qui in futuro -->
+      </ul>
+    </section>
+
+    <section>
       <h2>📖 Guida Elite</h2>
       <ul>
         <li><a href="./satellitari/satellitari-normies.html">📡 Sistema Satellitari</a></li>
