Update presentation section header for improved clarity

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
 
     <section>
-      <h2>📖 Presentazione Software</h2>
+      <h2>👨‍💼 Presentazione Software</h2>
       <ul>
         <li><a href="./ordini/demo-elite.html">🧑‍💻 Demo di Oscar</a></li>
         <!-- Aggiungi altri collegamenti qui in futuro -->
