--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   <title>Indice Documentazione</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div class="video-background">
+    <iframe 
+      src="https://www.youtube.com/embed/aYYaezldnyI?autoplay=1&mute=1&controls=0&loop=1&playlist=aYYaezldnyI&modestbranding=1&showinfo=0&rel=0" 
+      frameborder="0" 
+      allow="autoplay; fullscreen" 
+      allowfullscreen>
+    </iframe>
+  </div>
+
   <div class="container">
     <header>
       <h1>📚 Documentazione Elite</h1>
