Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -19,6 +19,21 @@
 
       <details open>
         <summary>2025-07-04</summary>
+
+        <div class="card">
+          <div class="card-title">Cancellazione Multipla</div>
+          <div class="card-body">
+            <section>
+              <ul>
+                <li>In Clienti/Mezzi/Autisti implementata cancellazione multipla dalla ricerca. Selezionando una o più righe dalla griglia, facendo tasto dx in una delle righe selezionate, viene chiesta la conferma di cancellazione. Se le righe selezionate sono più di una richiede nuovamente la conferma.</li>
+                <img src="../assets/anagrafiche/cancellazionemultipla.png" alt="cancellazione multipla" width="450px">
+                <li>N.B. Le operazioni di cancellazione sono tracciate nel file di LOG</li>
+                <img src="../assets/anagrafiche/logcancellazione.png" alt="logcancellazione" width="450px">
+              </ul>
+            </section>
+          </div>
+        </div>
+
         <div class="card">
           <div class="card-title">Modifica a Mantieni uniti poi e vari fix</div>
           <div class="card-body">
