Impostazione container ed ordine

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -38,8 +38,25 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-title">Nuova impostazione per ordini e container</div>
+          <div class="card-body">
 
+            <section>
+              <p>È stata aggiunta una nuova impostazione per visualizzare il codice dell'autista all'interno della combobox autisti
+            </section>
+
+            <section>
+              <ul>
+                <li>Il nome dell'impostazione è <code>MOSTRA CODICE AUTISTA CON NOME</code> una volta attivata o tramite gli ordine o dai container sarà attiva in entrambe le sezioni.</li>
+              </ul>
+            </section>
+
+            <img src="../assets/conferme/ImpostazioneNomeECodiceAutista.png" alt="Impostazione MOSTRA CODICE AUTISTA CON NOME" width="450px">
+          </div>
+        </div>
         
+
       </details>
       
       <details>
