Creata sezione per TirStati

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
           <!-- Aggiungi altri collegamenti qui in futuro -->
         </ul>
       </section>
+
+      <section>
+        <h2>📖 Guide Aggiuntive</h2>
+        <ul>
+          <li><a href="./ordini/configurazione-cap-esteri.html">🌍 Configurazione Cap Esteri</a></li>
+        </ul>
+      </section>
     </div>
   </body>
 </html>
