--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="video-background">
+    <!-- <div class="video-background">
       <iframe
         src="https://www.youtube.com/embed/aYYaezldnyI?autoplay=1&mute=1&controls=0&loop=1&playlist=aYYaezldnyI&modestbranding=1&showinfo=0&rel=0"
         frameborder="0"
@@ -21,7 +21,7 @@
         allowfullscreen
       >
       </iframe>
-    </div>
+    </div> -->
 
     <div class="container">
       <header>
@@ -68,6 +68,10 @@
           </li>
           <!-- Capitolo delle spese -->
           <li><a href="./spese/indice-spese.html">💰 Gestione Spese</a></li>
+
+          <li><a href="./API e Applicazioni/api-app-index.html">📡 API e Applicazioni</a></li>
+
+          <li><a href="./Deposito/deposito-logistico.html">🏭 Deposito</a></li>
         </ul>
       </section>
 
