Andato avanti con la documentazione dell'api

--- a/API e Applicazioni/api.html
+++ b/API e Applicazioni/api.html
@@ -12,21 +12,46 @@
     </header>
 
     <section>
+      <h2>Installazione</h2>
+      <p>Per l'installazione dell'API, è possibile guardare il video presente 
+        <strong><a href="https://mega.nz/file/7wE0FSqR#DWMFybqwYR0YNXF9e6R9eCZeMhFlLSTO9VYwtT-RZOE" target="_blank">qui🔗</a></strong>
+      </p>
+      <h2>Aggiornamento</h2>
+      <p>
+          Per aggiornare l'API, è necessario stare attenti ad un paio di cose:
+      </p>
       <ul>
-        <h2>Installazione</h2>
-        <h2>Aggiornamento</h2>
+        <li>
+          Per prima cosa, il <strong>file di aggiornamento si trova su Mega</strong> a questo percorso: _01_AGGIORNAMENTI > ApiTirR
+        </li>
         <p>
-            Per aggiornare l'API, è necessario stare attenti ad un paio di cose
-            <br/>
-            Per prima cosa, il file di aggiornamento si trova su Mega a questo percorso: _01_AGGIORNAMENTI > ApiTirR.
-            <br/>
-            Questa è la cartella nella quale si trovano una serie di file:
-            <img src="../assets/Api app e portali/cartella-mega-api.png"/>
-            La prima cartella contiene tutti i file ed è il contenuto del secondo file zippato che è quello da passare al cliente tramite il link diretto di Mega.
-            <br/>
-            Gli altri due file con estensione ".msi", sono file di 
+        Questa è la cartella nella quale si trovano una serie di file:
+        <img src="../assets/Api app e portali/cartella-mega-api.png"/>
+        La prima cartella contiene tutti i file ed è il contenuto del secondo file zippato che è quello da passare al cliente tramite il link diretto di Mega.
+        <br/>
+        Gli altri due file con estensione ".msi", sono file di installazione di alcuni pacchetti necessari per il corretto funzionamento, ma non sono necessari per l'aggiornamento.
         </p>
       </ul>
+      
+      <br/>
+
+      <ul>
+        <li>
+          Una volta scaricato il file, va individuato il server del cliente nel quale è hostato il servizio di API e lo si può fare in vari modi.
+          <br/>
+          Si può cercare IIS sulla barra di ricerca di Windows e una volta aperto andare fino a questa sottocartella:
+          <div class="div-horizontal-two-images-with-central-text">
+            <img src="../assets/Api app e portali/servizi-iis.png"/>
+            <p>e sulla destra vedete tutte le azioni che potete effettuare</p>
+            <img src="../assets/Api app e portali/azioni-servizio-iis.png"/>
+          </div>
+        </li>
+      </ul>
+
+      <h2>
+        Possibili errori
+      </h2>
+      Nel migliore dei casi, aggiornate e tutto vola liscio, ma magari fosse così semplice. Ecco a voi una lista di possibili errori ed eventuali soluzioni trovate da chi si è sbattutto per farlo funzionare:
     </section>
   </div>
 </body>
