--- a/Deposito/deposito-logistico.html
+++ b/Deposito/deposito-logistico.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>📚 Deposito Logistico</h1>
+      <h1>🏭 Deposito Logistico</h1>
     </header>
 
     <section>
