4272: DataEseguita spieghetion Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,25 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-07-09</summary>
+
+        <div class="card">
+          <div class="card-title">DataEseguita scadenze autista</div>
+          <div class="card-body">
+
+            <section>
+              <p>All'interno delle scadenze degli autisti la cella di <code>DataEseguita</code> viene utilizzata per le scadenze che vanno a ripetersi.
+                <br>Viene utilizzato come data di partenza per la prossima scadenza</p>
+            </section>
+
+            <img src="../assets/anagrafiche/Dipendenti/DataEseguitaScadenzeAutista.png" alt="DataEseguita scadenze autista" width="450px">
+          </div>
+        </div>        
+
+
+      </details>
+
+      <details>
         <summary>2025-07-08</summary>
 
         <div class="card">
@@ -56,7 +75,6 @@
           </div>
         </div>
         
-
       </details>
       
       <details>
