Aggiunta novità: reintroduzione del flag per nascondere gli autisti nella ricerca

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,21 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-07-10</summary>
+
+        <div class="card">
+          <div class="card-title">Flag nascondi negli autisti</div>
+          <div class="card-body">
+
+            <section>
+              <p>È stato reintrodotto il flag per nascondere gli autisti nella ricerca degli autisti.</p>
+            </section>
+          </div>
+        </div>        
+
+      </details>
+
+      <details>
         <summary>2025-07-09</summary>
 
         <div class="card">
