Nuova sezione per le personalizzazioni app

--- a/API e Applicazioni/app-etir.html
+++ b/API e Applicazioni/app-etir.html
@@ -32,6 +32,9 @@
       <ul>
         <li><a href="percorso-archiviazione-app.html">Percorso archiviazione</a></li>
       </ul>
+      <ul>
+        <li><a href="impostazioni-applicazione.html">Personalizzazioni app</a></li>
+      </ul>
     </section>
   </div>
 </body>
