--- a/API e Applicazioni/impostazioni-applicazione.html
+++ b/API e Applicazioni/impostazioni-applicazione.html
@@ -20,17 +20,36 @@
 
         <section>
             <h2>Elenco delle Impostazioni</h2>
-            <ul>
-                <li>
-                    <div class="list-item-header">
-                        <strong>NonMostraNumeroOrdineListaPoi</strong>
-                        <em>10/07/25</em>
-                    </div>
+            <details>
+                <summary class="list-item-header">
+                    <strong>NonMostraNumeroOrdineListaPoi</strong>
+                    <em>10 Luglio 2025</em>
+                </summary>
+                <div class="card-body">
                     <p>Il numero dell'ordine dal quale si origina il poi non viene più mostrarto una volta attivata
                         l'impostazione.</p>
-                </li>
+                </div>
+            </details>
 
-            </ul>
+            <!-- <details>
+                <summary class="list-item-header">
+                    <strong>Impostazione 2:</strong>
+                    <em>10 Luglio 2025</em>
+                </summary>
+                <div class="card-body">
+                    <p>Descrizione della seconda impostazione.</p>
+                </div>
+            </details>
+
+            <details>
+                <summary class="list-item-header">
+                    <strong>Impostazione 3:</strong>
+                    <em>10 Luglio 2025</em>
+                </summary>
+                <div class="card-body">
+                    <p>Descrizione della terza impostazione.</p>
+                </div>
+            </details> -->
         </section>
     </div>
 </body>
