--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
           <li>
             <a href="./ordini/inserire-un-ordine.html">📦 Gestione Ordini</a>
           </li>
+          <li>
+            <a href="./containertrazioni/giuda-container.html"
+              >🔳 Gestione Container</a
+            >
+          </li>
           <!-- <li><a href="documentazione_viaggi.html">🛣️ Pianificazione Viaggi</a></li> -->
           <li>
             <a href="./pianificazione/gruppi-mezzi.html"
@@ -69,7 +74,11 @@
           <!-- Capitolo delle spese -->
           <li><a href="./spese/indice-spese.html">💰 Gestione Spese</a></li>
 
-          <li><a href="./API e Applicazioni/api-app-index.html">📡 API e Applicazioni</a></li>
+          <li>
+            <a href="./API e Applicazioni/api-app-index.html"
+              >📡 API e Applicazioni</a
+            >
+          </li>
 
           <li><a href="./Deposito/deposito-logistico.html">🏭 Deposito</a></li>
         </ul>
@@ -90,7 +99,11 @@
       <section>
         <h2>📖 Guide Aggiuntive</h2>
         <ul>
-          <li><a href="./ordini/configurazione-cap-esteri.html">🌍 Configurazione Cap Esteri</a></li>
+          <li>
+            <a href="./ordini/configurazione-cap-esteri.html"
+              >🌍 Configurazione Cap Esteri</a
+            >
+          </li>
         </ul>
       </section>
     </div>
